2001-11-19  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (install): Quote directory names.
	* install.py (scripts): Use .bat extension on Windows.
	(install_package): Include .pyd files on Windows.
	* qm/Makefile.in (SCRIPTS): Generate batch files under Windows.
	* qm/platform.py: Treat unknown platforms as UNIX.
	(get_shell_for_command): New function.
	(get_shell_for_script): Likewise.
	* qm/platform_unix.py (get_shell_for_command): Remove.
	(get_shell_for_script): Likewise.
	* qm/platform_win32.py (default_shell): New variable.
	* qm/test/suite.py (Suite.__init__): Remove unnecessary assertion.
	* qm/test/classes/command.py (ReadThread): New class.
	(WriteThread): Likewise.
	(ExecTestBase.exit_code): Revise documentation.
	(ExecTestBase.Run): Rename to ...
	(ExecTestBase.RunProgram): ... this.  Support Windows.
	(ExecTest.RunProgram): Rename to ...
	(ExecTest.Run): ... this.
	(ShellCommandTest.RunProgram): Rename to ...
	(ShellCommandTest.Run): ... this.
	(ShellScriptTest.RunProgram): Rename to ...
	(ShellScriptTest.Run): ... this.

2001-11-16  Mark Mitchell  <mark@codesourcery.com>

	* qm/web.py (WebServer.RegisterPathTranslation): Do not require
	the target path to be an extant directory.

	* .cvsignore: Add qm.spec.

	* scripts/qm-release: Add support for binary releases.

	* configure.in: Remove references to Gadfly.
	* configure: Regenerated.

	* scripts/qm-release: New file.

	* instally.py (packages): Remove gadfly.
	* gadfly: Remove all files in this directory.
	* Makefile.in (install): Do not install Gadfly.

	Revert these changes:

	2001-11-16  Mark Mitchell  <mark@codesourcery.com>
	
	* Makefile.in (QM_SRPM): Remove target.
	* Makefile.in (QM_TAR_GZ): Modify logic.

	2001-11-15  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (QM_MAJOR_VER): New variable.
	(QM_MINOR_VER): Likewise.
	(QM_VERSION): Likewise.
	(QM_TAR_GZ): Likewise.
	(CVS_SERVER): Likewise.
	(CVS_REPOSITORY): Likewise.
	(CVS): Likewise.
	(RPM_ARCH): Likewise.